PR kern/51371: fix misleading indentation